--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: dallas-borealis
 ---
 
-<div id="home">
+<section>
   <h2>Blog Posts</h2>
   <ul class="posts">
     {% for post in site.posts %}
@@ -15,4 +15,4 @@ title: dallas-borealis
   <ul class="posts">
     <li><a href=""></a></li>
   </ul>
-</div>
+</section>
