--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@ title: dallas-borealis
 
 <section>
   <h2>Blog Posts</h2>
-  <ul class="posts">
+  <p>
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &#8250; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <span>{{ post.date | date_to_string }}</span> &#8250; <a href="{{ post.url }}">{{ post.title }}</a><br />
     {% endfor %}
-  </ul>
+  </p>
 
   <h2>Other stuff</h2>
-  <ul class="posts">
-    <li><a href=""></a></li>
-  </ul>
+  <p>
+    <a href=""></a><br />
+  </p>
 </section>
