--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ title: dallas-borealis
 
 <section>
   <h2>Blog Posts</h2>
-  <p>
+  <ul class="posts">
     {% for post in site.posts %}
-      <span>{{ post.date | date_to_string }}</span> &#8250; <a href="{{ post.url }}">{{ post.title }}</a><br />
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
-  </p>
+  </ul>
 
   <h2>Other stuff</h2>
   <p>
