--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@ layout: default
 title: dallas-borealis
 ---
 
+<section>
   <h2>Blog Posts</h2>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &#8250; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
-
+</section>
+<section>
   <h2>Other stuff</h2>
   <p>
     <a href=""></a><br />
   </p>
+</section>
